<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="0dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.Fonctionnalite1Activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/zoneTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/buttonFonctionnalite2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            >

            <TextView
                android:id="@+id/nom"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/version"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/nom"
                app:layout_constraintTop_toBottomOf="@+id/nom" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <Button
            android:id="@+id/buttonFonctionnalite2"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aller_ver_la_fonctionnalit_2"
            app:layout_constraintBottom_toTopOf="@id/buttonFonctionnalite3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zoneTitre" />

        <Button
            android:id="@+id/buttonFonctionnalite3"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aller_ver_la_fonctionnalit_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonFonctionnalite2"
            app:layout_constraintTop_toBottomOf="@+id/buttonFonctionnalite2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>